syntax = "proto3";

package io.loopholelabs.drafter.migration.v1;

option go_package = "github.com/loopholelabs/drafter/pkg/api/proto/migration/v1";

service SeederWithMeta {
  rpc ReadAt(ReadAtArgs) returns (ReadAtReply) {};
  rpc Track(TrackArgs) returns (TrackReply) {};
  rpc Sync(SyncArgs) returns (SyncReply) {};
  rpc Close(CloseArgs) returns (CloseReply) {};
  rpc Meta(MetaArgs) returns (MetaReply) {};
}

message ReadAtArgs {
  int32 Length = 1;
  int64 Off = 2;
}

message ReadAtReply {
  int32 N = 1;
  bytes P = 2;
}

message TrackArgs {}

message TrackReply {}

message SyncArgs {}

message SyncReply { repeated int64 DirtyOffsets = 1; }

message CloseArgs {}

message CloseReply {}

message MetaArgs {}

message MetaReply { int64 Size = 1; }